dataset/local/tf_eks_k8s_version/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-supported-k8s-version
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-supported-k8s-version
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-supported-k8s-version
    kind: Plan
    resources:
      - bad-plan
    result: fail
